Inizio lavoro CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div id="container">
       <header>
-        <!-- DA FARE FIXED E CAMBIARE COLORE -->
+        <!-- DA FARE STICKY E CAMBIARE COLORE -->
         <img alt="logo-medium" src="assets/imgs/svg/logo.svg" />
         <nav>
           <a href="#">Our Story</a>
@@ -172,36 +172,224 @@
 
       <div id="articlesAndTags">
         <div id="articles">
-          <div class="articleSubject">
-            <div class="authorArticle">
-              <img src="assets/imgs/image07.jpeg" />
-              <span>Robert Roy Britt</span>
-            </div>
-            <div class="articleTitle">
-              <h2>How Old is Old?</h2>
-              <p>
-                What we consider “old” changes dramatically with age, and our
-                perspectives can be predictive of how well we age
-              </p>
-            </div>
-            <div class="dateAndIcons">
-              <div class="dates">
-                <span>Oct 27</span>
-                <span>5 min read</span>
-                <button>Aging</button>
-                <img src="assets/imgs/svg/star.svg" />
+          <div class="articleContainer">
+            <div class="articleSubject">
+              <div class="authorArticle">
+                <img src="assets/imgs/image07.jpeg" />
+                <span>Robert Roy Britt</span>
               </div>
-              <div class="bookmark">
-                <img src="assets/imgs/svg/bookmark.svg" />
+              <div class="articleTitle">
+                <h2>How Old is Old?</h2>
+                <p>
+                  What we consider “old” changes dramatically with age, and our
+                  perspectives can be predictive of how well we age
+                </p>
               </div>
+              <div class="dateAndIcons">
+                <div class="dates">
+                  <span>Oct 27</span>
+                  <span>5 min read</span>
+                  <button>Aging</button>
+                  <img src="assets/imgs/svg/star.svg" />
+                </div>
+                <div class="bookmark">
+                  <img src="assets/imgs/svg/bookmark.svg" />
+                </div>
+              </div>
+            </div>
+            <div class="articleImage">
+              <img src="assets/imgs/image08.jpeg" />
             </div>
           </div>
-          <div class="articleImage">
-            <img src="assets/imgs/image08.jpeg" />
+
+          <div class="articleContainer">
+            <div class="articleSubject">
+              <div class="authorArticle">
+                <img src="assets/imgs/image09.jpeg" />
+                <span>Taru Anniina Liikanen</span>
+              </div>
+              <div class="articleTitle">
+                <h2>Is Taylor Swift Allowed to Speak About Fat?</h2>
+                <p>
+                  Can you speak about your trauma if you don't look traumatized?
+                </p>
+              </div>
+              <div class="dateAndIcons">
+                <div class="dates">
+                  <span>Oct 24</span>
+                  <span>6 min read</span>
+                  <button>Health</button>
+                  <img src="assets/imgs/svg/star.svg" />
+                </div>
+                <div class="bookmark">
+                  <img src="assets/imgs/svg/bookmark.svg" />
+                </div>
+              </div>
+            </div>
+            <div class="articleImage">
+              <img src="assets/imgs/image10.jpeg" />
+            </div>
+          </div>
+
+          <div class="articleContainer">
+            <div class="articleSubject">
+              <div class="authorArticle">
+                <img src="assets/imgs/image11.jpeg" />
+                <span>David Rodenas, Ph. D.</span>
+              </div>
+              <div class="articleTitle">
+                <h2>Don’t Screw Up, You Will Be Found Guilty</h2>
+                <p>
+                  Software Engineer, yours is the right to produce high-quality
+                  work at all times, also the liability.
+                </p>
+              </div>
+              <div class="dateAndIcons">
+                <div class="dates">
+                  <span>Oct 15</span>
+                  <span>5 min read</span>
+                  <button>Software Engineering</button>
+                  <img src="assets/imgs/svg/star.svg" />
+                </div>
+                <div class="bookmark">
+                  <img src="assets/imgs/svg/bookmark.svg" />
+                </div>
+              </div>
+            </div>
+            <div class="articleImage">
+              <img src="assets/imgs/image12.png" />
+            </div>
+          </div>
+
+          <div class="articleContainer">
+            <div class="articleSubject">
+              <div class="authorArticle">
+                <img src="assets/imgs/image13.png" />
+                <span>Microsoft Design</span>
+              </div>
+              <div class="articleTitle">
+                <h2>Leave No Trace</h2>
+                <p>
+                  How product designers can break from the status quo and help
+                  our planet
+                </p>
+              </div>
+              <div class="dateAndIcons">
+                <div class="dates">
+                  <span>Oct 25</span>
+                  <span>11 min read</span>
+                  <button>Sustainability</button>
+                  <img src="assets/imgs/svg/star.svg" />
+                </div>
+                <div class="bookmark">
+                  <img src="assets/imgs/svg/bookmark.svg" />
+                </div>
+              </div>
+            </div>
+            <div class="articleImage">
+              <img src="assets/imgs/image14.png" />
+            </div>
+          </div>
+
+          <div class="articleContainer">
+            <div class="articleSubject">
+              <div class="authorArticle">
+                <img src="assets/imgs/image15.jpeg" />
+                <span>Scott H. Young</span>
+              </div>
+              <div class="articleTitle">
+                <h2>Variability, Not Repetition, is the Key to Mastery</h2>
+                <p>
+                  Bruce Lee is reported to have said, “I fear not the man who
+                  has practiced 10,000 kicks once, but the man who has practiced
+                  one kick 10,000...
+                </p>
+              </div>
+              <div class="dateAndIcons">
+                <div class="dates">
+                  <span>Oct 26</span>
+                  <span>7 min read</span>
+                  <button>Health</button>
+                  <img src="assets/imgs/svg/star.svg" />
+                </div>
+                <div class="bookmark">
+                  <img src="assets/imgs/svg/bookmark.svg" />
+                </div>
+              </div>
+            </div>
+            <div class="articleImage">
+              <img src="assets/imgs/image16.jpg" />
+            </div>
+          </div>
+
+          <div class="articleContainer">
+            <div class="articleSubject">
+              <div class="authorArticle">
+                <img src="assets/imgs/image17.png" />
+                <span>Paul A. DeStefanoin Human Parts</span>
+              </div>
+              <div class="articleTitle">
+                <h2>What I Overheard as an Escape Room Actor</h2>
+                <p>
+                  Lock a group of people in a room and you’ll witness some
+                  surprising confessions
+                </p>
+              </div>
+              <div class="dateAndIcons">
+                <div class="dates">
+                  <span>Oct 18, 2020</span>
+                  <span>6 min read</span>
+                  <button>Experiences</button>
+                  <img src="assets/imgs/svg/star.svg" />
+                </div>
+                <div class="bookmark">
+                  <img src="assets/imgs/svg/bookmark.svg" />
+                </div>
+              </div>
+            </div>
+            <div class="articleImage">
+              <img src="assets/imgs/image18.jpeg" />
+            </div>
+          </div>
+
+          <div class="articleContainer">
+            <div class="articleSubject">
+              <div class="authorArticle">
+                <img src="assets/imgs/image19.jpeg" />
+                <span>Kim Scott</span>
+              </div>
+              <div class="articleTitle">
+                <h2>
+                  6 Steps for Setting Measurable Goals to Avoid “Productivity
+                  Paranoia”
+                </h2>
+                <p>
+                  With more people working in remote and hybrid environments
+                  than ever before, company, team and individual goals must be
+                  explicit and…
+                </p>
+              </div>
+              <div class="dateAndIcons">
+                <div class="dates">
+                  <span>Oct 24</span>
+                  <span>6 min read</span>
+                  <button>Health</button>
+                  <img src="assets/imgs/svg/star.svg" />
+                </div>
+                <div class="bookmark">
+                  <img src="assets/imgs/svg/bookmark.svg" />
+                </div>
+              </div>
+            </div>
+            <div class="articleImage">
+              <img src="assets/imgs/image20.jpg" />
+            </div>
           </div>
         </div>
 
-        <div id="tags"></div>
+        <div id="tags">
+          <span>DISCOVER MORE OF WHAT MATTERS TO YOU</span>
+        </div>
       </div>
     </div>
   </body>
