--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button>Membership</button>
             <button>Write</button>
             <button>Sign In</button>
-            <button>Get Started</button>
+            <button id="buttonNav">Get Started</button>
           </nav>
         </div>
       </header>
