--- a/index.html
+++ b/index.html
@@ -9258,82 +9258,91 @@
         <!-- TRENDING ARTICLES -->
         <div class="trendingArticles">
           <span class="numberArticle">01</span>
-          <div class="authorArticle">
-            <img
-              class="pfpArticle"
-              src="assets/imgs/image01.jpeg"
-              alt="profile-picture-author"
-            />
-            <span>Tom Cooper</span>
-          </div>
-          <div class="subjectArticle">
-            <span>Ukraine War, 23 October 2022</span>
-          </div>
-          <div class="dateAndReadTimeArticle">
-            <span>Oct 23</span>
-            <span>5 min read</span>
+          <div>
+            <div class="authorArticle">
+              <img
+                class="pfpArticle"
+                src="assets/imgs/image01.jpeg"
+                alt="profile-picture-author"
+              />
+              <span>Tom Cooper</span>
+            </div>
+            <div class="subjectArticle">
+              <span>Ukraine War, 23 October 2022</span>
+            </div>
+            <div class="dateAndReadTimeArticle">
+              <span>Oct 23</span>
+              <span>5 min read</span>
+            </div>
           </div>
         </div>
 
         <div class="trendingArticles">
           <span class="numberArticle">02</span>
-          <div class="authorArticle">
-            <img
-              class="pfpArticle"
-              src="assets/imgs/image02.png"
-              alt="profile-picture-author"
-            />
-            <span>Arthur Hayes</span>
-          </div>
-          <div class="subjectArticle">
-            <span>Comeback</span>
-          </div>
-          <div class="dateAndReadTimeArticle">
-            <span>Oct 26</span>
-            <span>24 min read</span>
+          <div>
+            <div class="authorArticle">
+              <img
+                class="pfpArticle"
+                src="assets/imgs/image02.png"
+                alt="profile-picture-author"
+              />
+              <span>Arthur Hayes</span>
+            </div>
+            <div class="subjectArticle">
+              <span>Comeback</span>
+            </div>
+            <div class="dateAndReadTimeArticle">
+              <span>Oct 26</span>
+              <span>24 min read</span>
+            </div>
           </div>
         </div>
 
         <div class="trendingArticles">
           <span class="numberArticle">03</span>
-          <div class="authorArticle">
-            <img
-              class="pfpArticle"
-              src="assets/imgs/image03.jpeg"
-              alt="profile-picture-author"
-            />
-            <span>Tom Cooper</span>
-          </div>
-          <div class="subjectArticle">
-            <span
-              >How I Learned to Love My Breasts Even Though One Is A Horcrux For
-              Voldemort</span
-            >
-          </div>
-          <div class="dateAndReadTimeArticle">
-            <span>Oct 26</span>
-            <span>2 min read</span>
+          <div>
+            <div class="authorArticle">
+              <img
+                class="pfpArticle"
+                src="assets/imgs/image03.jpeg"
+                alt="profile-picture-author"
+              />
+              <span>Tom Cooper</span>
+            </div>
+            <div class="subjectArticle">
+              <span
+                >How I Learned to Love My Breasts Even Though One Is A Horcrux
+                For Voldemort</span
+              >
+            </div>
+            <div class="dateAndReadTimeArticle">
+              <span>Oct 26</span>
+              <span>2 min read</span>
+            </div>
           </div>
         </div>
 
         <div class="trendingArticles">
           <span class="numberArticle">04</span>
-          <div class="authorArticle">
-            <img
-              class="pfpArticle"
-              src="assets/imgs/image04.png"
-              alt="profile-picture-author"
-            />
-            <span>Frank Mastropolo</span>
-          </div>
-          <div class="subjectArticle">
-            <span
-              >The Night Paul McCartney Donned a Disguise at Filmore East</span
-            >
-          </div>
-          <div class="dateAndReadTimeArticle">
-            <span>Oct 22</span>
-            <span>3 min read</span>
+          <div>
+            <div class="authorArticle">
+              <img
+                class="pfpArticle"
+                src="assets/imgs/image04.png"
+                alt="profile-picture-author"
+              />
+              <span>Frank Mastropolo</span>
+            </div>
+            <div class="subjectArticle">
+              <span
+                >The Night Paul McCartney Donned a Disguise at Filmore
+                East</span
+              >
+            </div>
+            <div class="dateAndReadTimeArticle">
+              <span>Oct 22</span>
+              <span>3 min read</span>
+            </div>
           </div>
         </div>
 
@@ -9360,7 +9369,7 @@
         </div>
 
         <div class="trendingArticles">
-          <span class="numberArticle">01</span>
+          <span class="numberArticle">06</span>
           <div class="authorArticle">
             <img
               class="pfpArticle"
@@ -9379,12 +9388,14 @@
         </div>
       </div>
 
+      <hr />
+
       <div id="articlesAndTags">
         <div id="articles">
           <div class="articleContainer">
             <div class="articleSubject">
               <div class="authorArticle">
-                <img src="assets/imgs/image07.jpeg" />
+                <img class="pfpArticle" src="assets/imgs/image07.jpeg" />
                 <span>Robert Roy Britt</span>
               </div>
               <div class="articleTitle">
@@ -9414,7 +9425,7 @@
           <div class="articleContainer">
             <div class="articleSubject">
               <div class="authorArticle">
-                <img src="assets/imgs/image09.jpeg" />
+                <img class="pfpArticle" src="assets/imgs/image09.jpeg" />
                 <span>Taru Anniina Liikanen</span>
               </div>
               <div class="articleTitle">
@@ -9443,7 +9454,7 @@
           <div class="articleContainer">
             <div class="articleSubject">
               <div class="authorArticle">
-                <img src="assets/imgs/image11.jpeg" />
+                <img class="pfpArticle" src="assets/imgs/image11.jpeg" />
                 <span>David Rodenas, Ph. D.</span>
               </div>
               <div class="articleTitle">
@@ -9473,7 +9484,7 @@
           <div class="articleContainer">
             <div class="articleSubject">
               <div class="authorArticle">
-                <img src="assets/imgs/image13.png" />
+                <img class="pfpArticle" src="assets/imgs/image13.png" />
                 <span>Microsoft Design</span>
               </div>
               <div class="articleTitle">
@@ -9503,7 +9514,7 @@
           <div class="articleContainer">
             <div class="articleSubject">
               <div class="authorArticle">
-                <img src="assets/imgs/image15.jpeg" />
+                <img class="pfpArticle" src="assets/imgs/image15.jpeg" />
                 <span>Scott H. Young</span>
               </div>
               <div class="articleTitle">
@@ -9534,7 +9545,7 @@
           <div class="articleContainer">
             <div class="articleSubject">
               <div class="authorArticle">
-                <img src="assets/imgs/image17.png" />
+                <img class="pfpArticle" src="assets/imgs/image17.png" />
                 <span>Paul A. DeStefanoin Human Parts</span>
               </div>
               <div class="articleTitle">
@@ -9564,7 +9575,7 @@
           <div class="articleContainer">
             <div class="articleSubject">
               <div class="authorArticle">
-                <img src="assets/imgs/image19.jpeg" />
+                <img class="pfpArticle" src="assets/imgs/image19.jpeg" />
                 <span>Kim Scott</span>
               </div>
               <div class="articleTitle">
