WIP Articoli correlati

--- a/index.html
+++ b/index.html
@@ -9286,7 +9286,7 @@
                 src="assets/imgs/image02.png"
                 alt="profile-picture-author"
               />
-              <span>Arthur Hayes</span>
+              <span>Arthur Hayes in Entrepeneur's Handbook</span>
             </div>
             <div class="subjectArticle">
               <span>Comeback</span>
@@ -9331,7 +9331,7 @@
                 src="assets/imgs/image04.png"
                 alt="profile-picture-author"
               />
-              <span>Frank Mastropolo</span>
+              <span>Frank Mastropolo in The Riffk</span>
             </div>
             <div class="subjectArticle">
               <span
@@ -9348,42 +9348,46 @@
 
         <div class="trendingArticles">
           <span class="numberArticle">05</span>
-          <div class="authorArticle">
-            <img
-              class="pfpArticle"
-              src="assets/imgs/image05.jpeg"
-              alt="profile-picture-author"
-            />
-            <span>Frank Andrade</span>
-          </div>
-          <div class="subjectArticle">
-            <span
-              >5 Python Projects to Automate Your Life: From Begginer to
-              Advanced</span
-            >
-          </div>
-          <div class="dateAndReadTimeArticle">
-            <span>Oct 13</span>
-            <span>6 min read</span>
+          <div>
+            <div class="authorArticle">
+              <img
+                class="pfpArticle"
+                src="assets/imgs/image05.jpeg"
+                alt="profile-picture-author"
+              />
+              <span>Frank Andrade in Towards Data Science</span>
+            </div>
+            <div class="subjectArticle">
+              <span
+                >5 Python Projects to Automate Your Life: From Begginer to
+                Advanced</span
+              >
+            </div>
+            <div class="dateAndReadTimeArticle">
+              <span>Oct 13</span>
+              <span>6 min read</span>
+            </div>
           </div>
         </div>
 
         <div class="trendingArticles">
           <span class="numberArticle">06</span>
-          <div class="authorArticle">
-            <img
-              class="pfpArticle"
-              src="assets/imgs/image06.png"
-              alt="profile-picture-author"
-            />
-            <span>Wesley Smits</span>
-          </div>
-          <div class="subjectArticle">
-            <span>How To Make Visual Studio Code Look Amazing</span>
-          </div>
-          <div class="dateAndReadTimeArticle">
-            <span>Oct 20</span>
-            <span>7 min read</span>
+          <div>
+            <div class="authorArticle">
+              <img
+                class="pfpArticle"
+                src="assets/imgs/image06.png"
+                alt="profile-picture-author"
+              />
+              <span>Wesley Smits in JavaScript In Plain English</span>
+            </div>
+            <div class="subjectArticle">
+              <span>How To Make Visual Studio Code Look Amazing</span>
+            </div>
+            <div class="dateAndReadTimeArticle">
+              <span>Oct 20</span>
+              <span>7 min read</span>
+            </div>
           </div>
         </div>
       </div>
