Articoli Correlati Completati, Mancano i tag di fianco e il footer

--- a/index.html
+++ b/index.html
@@ -9392,7 +9392,7 @@
         </div>
       </div>
 
-      <hr />
+      <hr style="color: white" />
 
       <div id="articlesAndTags">
         <div id="articles">
@@ -9413,7 +9413,7 @@
                 <div class="dates">
                   <span>Oct 27</span>
                   <span>5 min read</span>
-                  <button>Aging</button>
+                  <button class="articleButton">Aging</button>
                   <img src="assets/imgs/svg/star.svg" />
                 </div>
                 <div class="bookmark">
@@ -9442,7 +9442,7 @@
                 <div class="dates">
                   <span>Oct 24</span>
                   <span>6 min read</span>
-                  <button>Health</button>
+                  <button class="articleButton">Health</button>
                   <img src="assets/imgs/svg/star.svg" />
                 </div>
                 <div class="bookmark">
@@ -9472,7 +9472,7 @@
                 <div class="dates">
                   <span>Oct 15</span>
                   <span>5 min read</span>
-                  <button>Software Engineering</button>
+                  <button class="articleButton">Software Engineering</button>
                   <img src="assets/imgs/svg/star.svg" />
                 </div>
                 <div class="bookmark">
@@ -9502,7 +9502,7 @@
                 <div class="dates">
                   <span>Oct 25</span>
                   <span>11 min read</span>
-                  <button>Sustainability</button>
+                  <button class="articleButton">Sustainability</button>
                   <img src="assets/imgs/svg/star.svg" />
                 </div>
                 <div class="bookmark">
@@ -9533,7 +9533,7 @@
                 <div class="dates">
                   <span>Oct 26</span>
                   <span>7 min read</span>
-                  <button>Health</button>
+                  <button class="articleButton">Health</button>
                   <img src="assets/imgs/svg/star.svg" />
                 </div>
                 <div class="bookmark">
@@ -9563,7 +9563,7 @@
                 <div class="dates">
                   <span>Oct 18, 2020</span>
                   <span>6 min read</span>
-                  <button>Experiences</button>
+                  <button class="articleButton">Experiences</button>
                   <img src="assets/imgs/svg/star.svg" />
                 </div>
                 <div class="bookmark">
@@ -9597,7 +9597,7 @@
                 <div class="dates">
                   <span>Oct 24</span>
                   <span>6 min read</span>
-                  <button>Health</button>
+                  <button class="articleButton">Health</button>
                   <img src="assets/imgs/svg/star.svg" />
                 </div>
                 <div class="bookmark">
