Sezione tag e footer non finita

--- a/index.html
+++ b/index.html
@@ -9613,6 +9613,19 @@
 
         <div id="tags">
           <span>DISCOVER MORE OF WHAT MATTERS TO YOU</span>
+          <div>
+            <button>Programming</button>
+            <button>Data Science</button>
+            <button>Technology</button>
+            <button>Self Improvement</button>
+            <button>Writing</button>
+            <button>Relationships</button>
+            <button>Machine Learning</button>
+            <button>Productivity</button>
+            <button>Politics</button>
+          </div>
+          <hr />
+          <footer></footer>
         </div>
       </div>
     </div>
