--- a/index.html
+++ b/index.html
@@ -9625,7 +9625,17 @@
             <button>Politics</button>
           </div>
           <hr />
-          <footer></footer>
+          <footer>
+            <a href="#">Help</a>
+            <a href="#">Status</a>
+            <a href="#">Writers</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">About</a>
+            <a href="#">Knowable</a>
+          </footer>
         </div>
       </div>
     </div>
